Prevent wrapping display to the next line

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body{
     background-color: rgba(255, 255, 255, 0.6);
     padding: 10px;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .display{
